hphp/test/slow/type_structure/no-classname.php.expectf
Fatal error: Uncaught exception 'OutOfBoundsException' with message 'Out of bounds dict access: invalid index "classname"' in %s/no-classname.php:12
Stack trace:
%a
